# codex

./: .bazelrc  .gitignore  AGENTS.md  MODULE.bazel  README.md  announcement_tip.toml  justfile  pnpm-lock.yaml  pnpm-workspace.yaml  summary.md  upstream.json
.build-helper/: presets.json
.github/: actionlint.yaml  pull_request_template.md  validation-lanes.json
.github/codeql/: codeql-actions.yml  codeql-config.yml  codeql-rust-pr.yml  codeql-rust.yml
.github/scripts/: aggregate_validation_summary.py  check_markdown_links.py  (+18 more)
codex-rs/: Cargo.toml  README.md  deny.toml
codex-rs/chatgpt/: Cargo.toml
codex-rs/computer-use-runtime/: BUILD.bazel  Cargo.toml
codex-rs/computer-use-runtime/src/: lib.rs
docs/: agents_md.md  app-server-schema-differences.md  carry-divergence-ledger.md  config.md  contributing.md  downstream-divergence-tracking.md  downstream-regression-matrix.md  downstream-tool-surface-matrix.md  downstream.md  example-config.md  github-ci-offload.md  industrial_carry_workflow.md  install.md  memories.md  native-computer-use.md  prompt-stack-deep-dive.md  prompt-stack-ownership-matrix.md  prompt-stack.md  sedna-release.md  tui-chat-composer.md  usage-ledger.md  validation_workflow.md
patches/: pr5-list-agents-descendant-edge-status-enum.patch
scripts/: dispatch-frontier-max-wave.sh  dispatch-validation-lab-snapshot.sh  downstream-divergence-audit.py  github_webhook_receiver.py  install_sedna_release_asset  install_sedna_release_asset.py  resolve_sedna_release_version  stage_npm_packages.py  test_install_sedna_release_asset.py
(+1362 files in other folders)
